Fix fraction styling on iOS

--- a/css/lumeh.sass
+++ b/css/lumeh.sass
@@ -872,3 +872,9 @@ l-icon
 
 .mixed-number
   word-spacing: -0.25ch
+
+.replaced-fraction
+  .numerator
+    font-variant-position: super
+  .denominator
+    font-variant-position: sub
